--- a/index.html
+++ b/index.html
@@ -10,62 +10,31 @@
 <link rel="apple-touch-icon" href="./icon-1024x1024.png">
 
 <style>
-html, body {
-  margin:0; height:100%; width:100%;
-  font-family:Arial,sans-serif; background:#000;
-}
-iframe {
-  width:100%; height:100%;
-  border:none; display:block;
-}
-#loginOverlay {
-  position:fixed; inset:0;
-  background:#000;
-  display:flex; flex-direction:column;
-  justify-content:center; align-items:center;
-  z-index:999; color:#fff;
-}
-#loginOverlay img {
-  width:96px; height:96px; margin-bottom:16px;
-}
-#loginOverlay input {
-  padding:12px; font-size:16px;
-  width:220px; border-radius:6px;
-  border:none; margin-bottom:12px;
-}
-#loginOverlay button {
-  padding:12px 18px; font-size:16px;
-  border-radius:6px; border:none;
-  background:#007bff; color:#fff;
-  cursor:pointer;
-}
+html, body { margin:0; height:100%; width:100%; font-family:Arial,sans-serif; background:#000; }
+iframe { width:100%; height:100%; border:none; display:block; }
+#loginOverlay { position:fixed; inset:0; background:#000; display:flex; flex-direction:column; justify-content:center; align-items:center; z-index:999; color:#fff; }
+#loginOverlay img { width:96px; height:96px; margin-bottom:16px; }
+#loginOverlay input { padding:12px; font-size:16px; width:220px; border-radius:6px; border:none; margin-bottom:12px; }
+#loginOverlay button { padding:12px 18px; font-size:16px; border-radius:6px; border:none; background:#007bff; color:#fff; cursor:pointer; }
 #loginError { color:#ff4d4d; margin-top:12px; }
-#spinner {
-  border:4px solid rgba(255,255,255,0.2);
-  border-top:4px solid #007bff;
-  border-radius:50%;
-  width:36px; height:36px;
-  animation:spin 1s linear infinite;
-  margin-top:12px; display:none;
-}
-@keyframes spin {
-  from { transform:rotate(0deg); }
-  to { transform:rotate(360deg); }
-}
+#spinner { border:4px solid rgba(255,255,255,0.2); border-top:4px solid #007bff; border-radius:50%; width:36px; height:36px; animation:spin 1s linear infinite; margin-top:12px; display:none; }
+@keyframes spin { 0% { transform:rotate(0deg); } 100% { transform:rotate(360deg); } }
 </style>
 </head>
 
 <body>
 
+<!-- LOGIN -->
 <div id="loginOverlay">
   <img src="./icon-1024x1024.png" alt="Logo">
   <h2>Enter Password</h2>
   <input type="password" id="rowIdInput" placeholder="Password">
-  <button id="loginBtn">Submit</button>
+  <button onclick="submitRowId()">Submit</button>
   <div id="loginError"></div>
   <div id="spinner"></div>
 </div>
 
+<!-- APP -->
 <iframe id="appFrame"></iframe>
 
 <script type="module">
@@ -73,44 +42,42 @@ import { createClient } from "https://esm.sh/@supabase/supabase-js";
 
 /* ================= CONFIG ================= */
 const SUPABASE_URL = "https://iznxrukdqbrcxjzhvwyk.supabase.co";
-const SUPABASE_KEY = "<YOUR_ANON_KEY>";
+const SUPABASE_KEY = "<YOUR_ANON_KEY>"; // frontend safe
 const supabase = createClient(SUPABASE_URL, SUPABASE_KEY);
 
-const VERIFY_URL  = "https://iznxrukdqbrcxjzhvwyk.supabase.co/functions/v1/verify-link";
-const CHECK_LAST4 = "https://iznxrukdqbrcxjzhvwyk.supabase.co/functions/v1/checklast4";
-const APP_URL     = "https://bet-point.appsmith.com/app/signals/page1-68b217383a43874978908b5c?embed=true";
-const POLL_MS     = 5000;
+const VERIFY_URL   = 'https://iznxrukdqbrcxjzhvwyk.supabase.co/functions/v1/verify-link';
+const CHECK_LAST4  = 'https://iznxrukdqbrcxjzhvwyk.supabase.co/functions/v1/checklast4';
+const APP_URL      = 'https://bet-point.appsmith.com/app/signals/page1-68b217383a43874978908b5c?embed=true';
+const POLL_MS      = 5000;
 
 let rowId = null;
 let loginCode = null;
 let pollTimer = null;
+let gracePeriod = false;
 
 /* ================= AUTH STATE ================= */
 function setAuthState(isAuthed, reason = null) {
-  const overlay = document.getElementById("loginOverlay");
-  const frame = document.getElementById("appFrame");
+  const overlay = document.getElementById('loginOverlay');
+  const frame = document.getElementById('appFrame');
 
   if (isAuthed) {
-    overlay.style.display = "none";
+    overlay.style.display = 'none';
     frame.src = APP_URL;
   } else {
-    localStorage.removeItem("rowId");
-    localStorage.removeItem("loginCode");
-    frame.src = "about:blank";
-    overlay.style.display = "flex";
+    localStorage.removeItem('rowId');
+    localStorage.removeItem('loginCode');
+    frame.src = 'about:blank';
+    overlay.style.display = 'flex';
     if (pollTimer) clearInterval(pollTimer);
     pollTimer = null;
-    if (reason) {
-      document.getElementById("loginError").textContent =
-        "Logged out: " + reason;
-    }
+    if(reason) document.getElementById('loginError').textContent = "Logged out: " + reason;
   }
 }
 
 /* ================= AUTO LOGIN ================= */
-window.addEventListener("DOMContentLoaded", () => {
-  const savedRow = localStorage.getItem("rowId");
-  const savedCode = localStorage.getItem("loginCode");
+window.addEventListener('DOMContentLoaded', () => {
+  const savedRow = localStorage.getItem('rowId');
+  const savedCode = localStorage.getItem('loginCode');
 
   if (savedRow && savedCode) {
     rowId = savedRow;
@@ -120,58 +87,65 @@ window.addEventListener("DOMContentLoaded", () => {
   }
 });
 
-/* ================= LOGIN (NO TIMING) ================= */
+/* ================= LOGIN ================= */
 async function submitRowId() {
-  const error = document.getElementById("loginError");
-  const spinner = document.getElementById("spinner");
-  const input = document.getElementById("rowIdInput");
-
-  rowId = input.value.trim();
+  const error = document.getElementById('loginError');
+  const spinner = document.getElementById('spinner');
+  rowId = document.getElementById('rowIdInput').value.trim();
   if (!rowId) return;
 
-  error.textContent = "";
-  spinner.style.display = "block";
+  error.textContent = '';
+  spinner.style.display = 'block';
 
   loginCode = crypto.randomUUID();
 
   try {
+    // --- Step 1: call verify-link as usual ---
     const verifyRes = await fetch(VERIFY_URL, {
-      method: "POST",
-      headers: { "Content-Type": "application/json" },
+      method:'POST',
+      headers:{ 'Content-Type':'application/json' },
       body: JSON.stringify({ row_id: rowId, code: loginCode })
     });
-
     const verifyData = await verifyRes.json();
+
     if (!verifyData.valid) {
-      error.textContent = "Login failed";
+      error.textContent = 'Login failed';
       return;
     }
 
-    const { data } = await supabase
-      .from("signal_login")
-      .select("code")
-      .eq("row_id", rowId)
-      .order("created_at", { ascending: false })
+    // --- Step 2: wait 3 seconds ---
+    await new Promise(r => setTimeout(r, 3000));
+
+    // --- Step 3: pull latest code directly from signal_login table ---
+    const { data, error: codeError } = await supabase
+      .from('signal_login')
+      .select('code')
+      .eq('row_id', rowId)
+      .order('created_at', { ascending: false })
       .limit(1)
       .maybeSingle();
 
-    if (!data?.code) {
-      error.textContent = "Login failed";
+    if (codeError || !data?.code) {
+      error.textContent = 'Login failed: no code found';
       return;
     }
 
     loginCode = data.code;
-    localStorage.setItem("rowId", rowId);
-    localStorage.setItem("loginCode", loginCode);
+
+    // --- Step 4: store and continue as usual ---
+    localStorage.setItem('rowId', rowId);
+    localStorage.setItem('loginCode', loginCode);
 
     setAuthState(true);
+    gracePeriod = true;
+    setTimeout(() => gracePeriod = false, 3000);
     startPolling();
 
   } catch (err) {
-    console.error(err);
-    error.textContent = "Server error";
+    console.error("Login exception:", err);
+    error.textContent = 'Server error';
   } finally {
-    spinner.style.display = "none";
+    spinner.style.display = 'none';
   }
 }
 
@@ -180,36 +154,38 @@ function startPolling() {
   if (pollTimer) clearInterval(pollTimer);
 
   const pollFn = async () => {
+    if (gracePeriod) return;
     if (!rowId || !loginCode) return;
 
     try {
       const res = await fetch(CHECK_LAST4, {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
+        method:"POST",
+        headers:{ "Content-Type":"application/json" },
         body: JSON.stringify({ row_id: rowId, code: loginCode })
       });
 
       if (!res.ok) return;
 
       const data = await res.json();
+
       if (!data.valid) {
-        setAuthState(false, "Logged in elsewhere");
+        setAuthState(false, data.error || "Logged in elsewhere");
       }
-    } catch (e) {
-      console.error("Poll error:", e);
+
+    } catch(err) {
+      console.error("Polling exception:", err);
     }
   };
 
-  pollFn();
+  pollFn(); // first poll immediately
   pollTimer = setInterval(pollFn, POLL_MS);
 }
 
-/* ================= EVENTS ================= */
-document.getElementById("loginBtn").addEventListener("click", submitRowId);
-document.getElementById("rowIdInput").addEventListener("keydown", e => {
-  if (e.key === "Enter") submitRowId();
+/* ================= ENTER KEY SUBMIT ================= */
+document.getElementById('rowIdInput').addEventListener('keydown', e => {
+  if (e.key === 'Enter') submitRowId();
 });
 </script>
 
 </body>
-</html>
+</html> 
