--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <meta name="theme-color" content="#007bff">
 <link rel="apple-touch-icon" href="./icon-1024x1024.png">
 
+<script src="https://cdn.onesignal.com/sdks/web/v16/OneSignalSDK.page.js" defer></script>
+
 <style>
 html, body { margin:0; height:100%; width:100%; font-family:Arial,sans-serif; background:#000; }
 iframe { width:100%; height:100%; border:none; display:block; }
@@ -37,23 +39,52 @@ iframe { width:100%; height:100%; border:none; display:block; }
 <!-- APP -->
 <iframe id="appFrame"></iframe>
 
-<script type="module">
-import { createClient } from "https://esm.sh/@supabase/supabase-js";
-
+<script>
 /* ================= CONFIG ================= */
-const SUPABASE_URL = "https://iznxrukdqbrcxjzhvwyk.supabase.co";
-const SUPABASE_KEY = "<YOUR_ANON_KEY>"; // frontend safe
-const supabase = createClient(SUPABASE_URL, SUPABASE_KEY);
-
 const VERIFY_URL   = 'https://iznxrukdqbrcxjzhvwyk.supabase.co/functions/v1/verify-link';
+const REGISTER_URL = 'https://iznxrukdqbrcxjzhvwyk.supabase.co/functions/v1/register-device';
 const CHECK_LAST4  = 'https://iznxrukdqbrcxjzhvwyk.supabase.co/functions/v1/checklast4';
 const APP_URL      = 'https://bet-point.appsmith.com/app/signals/page1-68b217383a43874978908b5c?embed=true';
-const POLL_MS      = 5000;
+const POLL_MS      = 15000;
+const HEARTBEAT_MS = 10000;
+const deviceType   = /Mobi|Android/i.test(navigator.userAgent) ? 'mobile' : 'web';
+const ONESIGNAL_APP_ID = "2b94ad70-2518-44d4-aaef-bfb95739206f";
 
 let rowId = null;
 let loginCode = null;
 let pollTimer = null;
+let heartbeatTimer = null;
 let gracePeriod = false;
+
+/* ================= HEARTBEAT ================= */
+function startHeartbeat() {
+  stopHeartbeat();
+  heartbeatTimer = setInterval(() => {
+    if (document.visibilityState !== 'visible') return;
+    if (!rowId || !loginCode) return;
+
+    window.OneSignalDeferred?.push(async function(OneSignal) {
+      try {
+        await OneSignal.login(rowId);
+        console.log("🫀 OneSignal heartbeat refreshed");
+      } catch (e) {
+        console.warn("Heartbeat failed", e);
+      }
+    });
+  }, HEARTBEAT_MS);
+}
+
+function stopHeartbeat() {
+  if (heartbeatTimer) {
+    clearInterval(heartbeatTimer);
+    heartbeatTimer = null;
+  }
+}
+
+document.addEventListener("visibilitychange", () => {
+  if (document.visibilityState === "visible") startHeartbeat();
+  else stopHeartbeat();
+});
 
 /* ================= AUTH STATE ================= */
 function setAuthState(isAuthed, reason = null) {
@@ -61,16 +92,23 @@ function setAuthState(isAuthed, reason = null) {
   const frame = document.getElementById('appFrame');
 
   if (isAuthed) {
+    console.log("✅ Auth successful");
     overlay.style.display = 'none';
     frame.src = APP_URL;
+    startHeartbeat();
   } else {
+    console.warn("⛔ Auth revoked:", reason);
+
     localStorage.removeItem('rowId');
     localStorage.removeItem('loginCode');
-    frame.src = 'about:blank';
-    overlay.style.display = 'flex';
+
     if (pollTimer) clearInterval(pollTimer);
     pollTimer = null;
-    if(reason) document.getElementById('loginError').textContent = "Logged out: " + reason;
+
+    stopHeartbeat();
+
+    frame.src = 'about:blank';
+    overlay.style.display = 'flex';
   }
 }
 
@@ -80,9 +118,12 @@ window.addEventListener('DOMContentLoaded', () => {
   const savedCode = localStorage.getItem('loginCode');
 
   if (savedRow && savedCode) {
+    console.log("🔄 Found saved credentials", { savedRow, savedCode });
     rowId = savedRow;
     loginCode = savedCode;
+
     setAuthState(true);
+    initOneSignal(rowId);
     startPolling();
   }
 });
@@ -100,45 +141,32 @@ async function submitRowId() {
   loginCode = crypto.randomUUID();
 
   try {
-    // --- Step 1: call verify-link as usual ---
-    const verifyRes = await fetch(VERIFY_URL, {
+    console.log("🔑 Attempting login with", { rowId, loginCode });
+
+    const res = await fetch(VERIFY_URL, {
       method:'POST',
       headers:{ 'Content-Type':'application/json' },
       body: JSON.stringify({ row_id: rowId, code: loginCode })
     });
-    const verifyData = await verifyRes.json();
 
-    if (!verifyData.valid) {
+    const data = await res.json();
+    console.log("Login response:", data);
+
+    if (!data.valid) {
       error.textContent = 'Login failed';
+      console.warn("❌ Login failed", data);
       return;
     }
 
-    // --- Step 2: wait 3 seconds ---
-    await new Promise(r => setTimeout(r, 3000));
-
-    // --- Step 3: pull latest code directly from signal_login table ---
-    const { data, error: codeError } = await supabase
-      .from('signal_login')
-      .select('code')
-      .eq('row_id', rowId)
-      .order('created_at', { ascending: false })
-      .limit(1)
-      .maybeSingle();
-
-    if (codeError || !data?.code) {
-      error.textContent = 'Login failed: no code found';
-      return;
-    }
-
-    loginCode = data.code;
-
-    // --- Step 4: store and continue as usual ---
     localStorage.setItem('rowId', rowId);
     localStorage.setItem('loginCode', loginCode);
 
     setAuthState(true);
+    initOneSignal(rowId);
+
     gracePeriod = true;
-    setTimeout(() => gracePeriod = false, 3000);
+    setTimeout(() => gracePeriod = false, 4000);
+
     startPolling();
 
   } catch (err) {
@@ -149,27 +177,75 @@ async function submitRowId() {
   }
 }
 
+/* ================= ONESIGNAL ================= */
+function initOneSignal(rowId) {
+  window.OneSignalDeferred = window.OneSignalDeferred || [];
+  OneSignalDeferred.push(async function(OneSignal) {
+    await OneSignal.init({
+      appId: ONESIGNAL_APP_ID,
+      path:"/signals/",
+      serviceWorkerPath:"signals/OneSignalSDKWorker.js",
+      serviceWorkerUpdaterPath:"signals/OneSignalSDKUpdaterWorker.js",
+      notifyButton:{ enable:true }
+    });
+
+    try {
+      await OneSignal.login(rowId);
+      const playerId = await OneSignal.getUserId();
+      console.log("🎯 OneSignal playerId:", playerId);
+
+      await fetch(REGISTER_URL, {
+        method:"POST",
+        headers:{ "Content-Type":"application/json" },
+        body: JSON.stringify({
+          rowId,
+          loginCode,
+          one_signal_id: playerId,
+          device_type: deviceType
+        })
+      });
+
+      startHeartbeat();
+      console.log("✅ OneSignal initialized", { rowId, playerId });
+
+    } catch(err) {
+      console.error("OneSignal error:", err);
+    }
+  });
+}
+
 /* ================= POLLING ================= */
 function startPolling() {
   if (pollTimer) clearInterval(pollTimer);
 
   const pollFn = async () => {
     if (gracePeriod) return;
-    if (!rowId || !loginCode) return;
+    if (!rowId || !loginCode) {
+      console.warn("Polling skipped: rowId or loginCode missing", { rowId, loginCode });
+      return;
+    }
 
     try {
+      console.log("Polling checklast4 with:", { rowId, loginCode });
+
       const res = await fetch(CHECK_LAST4, {
         method:"POST",
         headers:{ "Content-Type":"application/json" },
         body: JSON.stringify({ row_id: rowId, code: loginCode })
       });
 
-      if (!res.ok) return;
+      if (!res.ok) {
+        const text = await res.text();
+        console.error("Polling fetch error:", res.status, text);
+        return;
+      }
 
       const data = await res.json();
+      console.log("Polling response:", data);
 
       if (!data.valid) {
-        setAuthState(false, data.error || "Logged in elsewhere");
+        console.warn("Auth invalid, logging out:", data.error || "Unknown reason");
+        setAuthState(false, data.error || "Logged in on another device");
       }
 
     } catch(err) {
@@ -177,15 +253,8 @@ function startPolling() {
     }
   };
 
-  pollFn(); // first poll immediately
-  pollTimer = setInterval(pollFn, POLL_MS);
-}
+  // 🔹 First poll immediately
+  pollFn();
 
-/* ================= ENTER KEY SUBMIT ================= */
-document.getElementById('rowIdInput').addEventListener('keydown', e => {
-  if (e.key === 'Enter') submitRowId();
-});
-</script>
-
-</body>
-</html> 
+  // 🔹 Then start interval
+  pollTimer = setInterval(pollFn, POLL_MS); give whole update
