--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@ iframe { width:100%; height:100%; border:none; display:block; }
   display:none;
 }
 @keyframes spin { 0% { transform: rotate(0deg); } 100% { transform: rotate(360deg); } }
-#homescreenOverlay p { font-size:18px; text-align:center; max-width:260px; }
-#homescreenOverlay button { margin-top:12px; background:#ff4d4d; }
+#homescreenOverlay p { font-size:18px; text-align:center; max-width:280px; line-height:1.5; }
+#homescreenOverlay button { display:none; } /* hide the button */
 </style>
 </head>
 <body>
@@ -54,8 +54,7 @@ iframe { width:100%; height:100%; border:none; display:block; }
 <div id="homescreenOverlay" style="display:none;">
   <img src="./icon-1024x1024.png" alt="Logo">
   <h2>Add to Homescreen</h2>
-  <p>To continue, please add this app to your homescreen. After that, reopen the app and enter your password.</p>
-  <button onclick="hideHomescreenOverlay()">OK</button>
+  <p>TO CONTINUE, ADD THIS APP TO YOUR HOMESCREEN. AFTER THAT, OPEN THE ALERTS APP AND ENTER YOUR PASSWORD. FINALLY, CLICK THE RED BELL AND SUBSCRIBE TO SIGNAL NOTIFICATIONS.</p>
 </div>
 
 <!-- APP IFRAME -->
